# -lab-Kaufman-Robets-Symulation

./: .gitignore  CMakeLists.txt  run.sh
inc/: stream.hpp  system.hpp
src/: main.cpp  system.cpp
